--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -2,15 +2,13 @@
 	<div class="close-button" id="close-button">x</div>					
 	<div class="welcome-content">
 	<p>
-	В нашем каталоге около 150 саун в Ижевске, Нефтекамске, Набережных Челнах и других городах региона. Более 600 фотографий. Здесь Вы быстро и легко найдете всю информацию о саунах и банях вашего города. 
-	Задайте параметры, которые наиболее важны для вас при выборе сауны, и
-	наша система найдет для вас подходящие сауны. Или же посмотрите <a href="/all">все сауны</a>, которые имеются в нашем каталоге.</p>
+	В нашем каталоге около 200 саун региона Поволжье - в Ижевске, Казани, Нефтекамске, Набережных Челнах, Нижнекамске и других городах. Более 1000 фотографий. 
+	Постоянно добавляются новые сауны, охватываются новые города.
 	<p>
-	Под рукой нет компьютера? Для такого случая мы создали мобильные версии сайта — <a href="/m">для обычных телефонов</a> и для <a href="/pda">для смартфонов</a>. 
-	Ищете сауну в любое время и в любом месте!</p>
+	Две мобильные версии сайта — <a href="/m">для обычных телефонов</a> и для <a href="/pda">для смартфонов</a>. 
+	А для владельцев смартфонов на платформе Android мы выпустили <a href="/mobile-app">приложение "Сауны и бани"</a>.</p>
 	<p>
-	Выбрали подходяшую сауну, но чтобы внести предоплату надо ехать на другой конец города? 	
-	<a href="/terms">Онлайн-бронирование саун</a> решает эту проблему — оплачивайте сауну с помощью банковских карт и терминалов Qiwi.
+	Также мы предлагаем систему <a href="/terms">онлайн-бронирования саун</a> — оплачивать сауну можно не вставая со стула, с помощью банковских карт, электронных денег и терминалов Qiwi.
 	</p>
 	<p>Мы сделали по-настоящему удобный и абсолютно бесплатный сервис потому,
 	что в первую очередь мы создавали его для себя! :)
