--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -29,7 +29,7 @@
 						<div class="question"><b>Что означает поле "Провайдер" на форме бронирования?</b></div>
 						<div class="answer">
 						Провайдер - это компания-партнер, которая занимается обработкой платежей, совершаемых на нашем сайте. Провайдеры могут отличаться видами принимаемых платежей, а также размером комиссии.
-						Например, если Вы собираетесь оплачивать заказ с помощью WebMoney, то вам лучше выбрать провайдера "Webmoney", если Вы хотите оплатить с помощью смс - выбирите "A1PAY" 
+						Например, если Вы собираетесь оплачивать заказ с помощью WebMoney, то вам лучше выбрать провайдера "Webmoney", если Вы хотите оплатить с помощью смс - выберите "A1PAY" 
 						(<a href="http://www.a1agregator.ru/main/abonent" target="_blank">посмотреть стоимость</a>), во всех 
 						остальных случаях рекомендуем Вам оплачивать через систему "Robokassa".
 						</div>
