--- a/app/views/shared/_mobile.html.erb
+++ b/app/views/shared/_mobile.html.erb
@@ -1,3 +1,6 @@
 <div class="mobile-ver">	
 	<%= link_to t(:mobile_version), "/m" %>  | <%= link_to t(:smartfon_version), "/pda" %>  
+	<br/><br/>
+	<span style="color: red; font-weight:bold;">NEW!</span> <%= link_to "Приложение \"Сауны и бани\" для Android", "/mobile-app" %>
+	<br/><br/>
 </div>
