--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
 	<body>
 		<div class="wrapper">
 			<div class="content">
-				<div class="content-left">							
+				<div class="content-left">														
 					<!-- VK Widget -->
 					
 					<div id="vk_groups"></div>
@@ -75,8 +75,11 @@
 					
 					<!-- /VK Widget -->								
 					
+					<div style="padding-left:20px;">
+					<a class="banner" href="http://можем-всё.рф" target="_blank"><%= image_tag("banner.jpg") %></a>
+					</div>
+					
 					<a class="banner" href="http://можем-всё.рф" target="_blank"><%= image_tag("banner-mogem.jpg") %></a><br/>
-
 					<table>
 					<tr>
 					<td>
