--- a/app/views/pages/mobile-app.html.erb
+++ b/app/views/pages/mobile-app.html.erb
@@ -10,22 +10,25 @@
 				<div class="extra_params _expanded">
 					<div class="about">
 						<p>Мобильное приложение для телефонов на платформе Android позволит вам быстро найти нужную сауну, сделав всего несколько касаний. Приложение разработано 
-						на Android 1.6, т.о. оно поддерживается 99% устройств на этой популярной платформе.</p>
-
-						<p><a href="/assets/android/gotosauna.apk">Скачать gotosauna.apk, 120Kb</a> - скачать бесплатно приложение "Сауны и бани" на телефон.</p>
+						на Android 1.6, т.о. оно поддерживается 99% устройств на этой популярной платформе.</p>	
 						
-						
-						<div class="android">
-						<%= image_tag("/assets/android/m1.png") %>
-						<%= image_tag("/assets/android/m5.png") %>
-						<%= image_tag("/assets/android/m6.png") %>
-						</div>
+						<p><a href="/assets/android/gotosauna.apk">Скачать gotosauna.apk, 120Kb</a> - скачать бесплатно приложение "Сауны и бани" на телефон. Ссылка для скачивания через QR-код:<br/> 		
+						</p>
+						<img src="http://qr.kaywa.com/img.php?s=8&d=http%3A%2F%2Fgo-to-sauna.ru%2Fassets%2Fandroid%2Fgotosauna.apk" 
+						align="center" width="200px" height="200px" alt="QRCode"/>
+						<br/><br/>
 						
 						<p>Внимание! Приложение использует подключение к сети интернет для получения данных, поэтому при скачивании с вашего телефона информации оператор сотовой связи может 
 						взимать плату за использование интернета согласно вашему тарифу. Также обратите внимание, что приложение кэширует полученную информацию на вашем телефоне для экономии трафика, 
 						т.о. при установке приложения необходимо дать разрешение на право записи информации в файловую систему вашего телефона. 
-						</p>				
-												
+						</p>							
+																		
+						<div class="android">
+						<%= image_tag("/assets/android/m1.png") %>
+						<%= image_tag("/assets/android/m5.png") %>
+						<%= image_tag("/assets/android/m6.png") %>
+						</div>		
+						
 						<p>						
 						Вы можете оставить свои замечания о работе приложения <a href="http://go-to-sauna.reformal.ru" target="blank">здесь</a>. В замечаниях не забывайте указывать модель вашего телефона и версию Android. 			
 						</p>	
