--- a/app/views/pages/all.touch.erb
+++ b/app/views/pages/all.touch.erb
@@ -5,11 +5,33 @@
 </div>
 
 <div data-role="content">
-  <ul data-role="listview">
-    <% @saunas.each do |sauna| %>
+  <ul data-role="listview">    
     <li>
-      <%= link_to sauna.name, sauna %>
+		<a href="/votkinsk">Воткинск</a>
     </li>
-    <% end %>
+    <li>
+		<a href="/glazov">Глазов</a>
+    </li>
+    <li>
+		<a href="/izhevsk">Ижевск</a>
+    </li>
+    <li>
+		<a href="/kazan">Казань</a>
+    </li>
+    <li>
+		<a href="/kirov">Киров</a>
+    </li>
+    <li>
+		<a href="/mozhga">Можга</a>
+    </li>
+	<li>
+		<a href="/neftekamsk">Нефтекамск</a>
+    </li>
+    <li>
+		<a href="/nizhnekamsk">Нижнекамск</a>
+    </li>	
+    <li>
+		<a href="/sarapul">Сарапул</a>
+    </li>	
   </ul>
 </div>
