--- a/app/views/layouts/_menu_super_admin.html.erb
+++ b/app/views/layouts/_menu_super_admin.html.erb
@@ -50,9 +50,16 @@
 			<% else %>												
 				<a href="/admin/sauna/<%= @sauna.id %>/sauna_comments"><%= t(:comments_section) %></a>
 			<% end %>									
-		</span><br/>												
-	
+		</span><br/>													
 <% end %>	
+
+<span style="padding-left:0em">&mdash; 
+	<% if (request.fullpath.include?("/admin/advertisements")) %>
+		<b>рекламные объявления</b>
+	<% else %>												
+		<a href="/admin/advertisements">рекламные объявления</a>
+	<% end %>									
+</span><br/>
 
 <span style="padding-left:0em">&mdash; 
 	<% if (request.fullpath.include?("/admin/sms_messages")) %>
