--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
 					<!-- /VK Widget -->								
 					
 					<div style="padding-left:20px;">
-					<a class="banner" href="http://можем-всё.рф" target="_blank"><%= image_tag("banner.jpg") %></a>
+					<a class="banner" href="#" target="_blank"><%= image_tag("banner.jpg") %></a>
 					</div>
 					
 					<a class="banner" href="http://можем-всё.рф" target="_blank"><%= image_tag("banner-mogem.jpg") %></a><br/>
