select city on main

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,9 +68,9 @@
 			<meta name="keywords" content="сауна, бани, сауны Уфы, сауна в Уфе, бани и сауны, бани Уфы, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
 			<title>Сауны Уфы, русские, японские и турецкие бани — цены в Уфе</title>				
 		<% else %>
-			<meta name="description" content="Сауны Ижевска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Ижевске в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Ижевска, сауна в Ижевске, бани и сауны, бани Ижевска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Ижевска, русские, японские и турецкие бани — цены в Ижевске</title>
+			<meta name="description" content="Сауны, бани, хаммамы Ижевска, Казани, Кирова, Уфы, Перми, Набережных Челнов, Нижнекамска, Нефтекамска. Телефоны, цены, фото, отзывы." />
+			<meta name="keywords" content="сауны, сауна, баня, бани, хаммам, сауны Ижевска, сауны Казани, сауны Уфы, сауны Перми, сауны Кирова, сауны Набережных Челнов, сауны Нефтекамска" />				
+			<title>Сауны Ижевска, Казани, Кирова, Набережных Челнов. Русские, японские и турецкие бани — цены, фото, отзывы.</title>
 		<% end %>	
 		
 		<%= csrf_meta_tag %>	
@@ -78,9 +78,11 @@
 		<%= render 'layouts/stylesheets' %>						
 	</head>
 	<body>
+		<%= render 'shared/mobile' %>	
 		<div class="wrapper">
 			<div class="content">
 				<div class="content-left">														
+					
 					<!-- VK Widget -->					
 					
 					<div id="vk_groups"></div>
