--- a/app/views/saunas/index.html.erb
+++ b/app/views/saunas/index.html.erb
@@ -1,6 +1,6 @@
 <div class="main-page">
-	<%= render 'shared/globalsearch' %>	
-	<%= render 'shared/mobile' %>	
+	<%= render 'shared/globalsearch' %>		
+	<%= render 'city' %>	
 	<%= render 'searchform' %>	
 	<%= render 'results' %>	
 	<br/>
