--- a/app/views/shared/_mobile.html.erb
+++ b/app/views/shared/_mobile.html.erb
@@ -1,6 +1,4 @@
-<div class="mobile-ver">	
-	<%= link_to t(:mobile_version), "/m" %>  | <%= link_to t(:smartfon_version), "/pda" %>  
-	<br/><br/>
-	<span style="color: red; font-weight:bold;">NEW!</span> <%= link_to "Приложение \"Сауны и бани\" для Android", "/mobile-app" %>
-	<br/><br/>
+<div style="z-index: 200; position: absolute; margin-top: 15px; margin-left:100px; padding: 15px 10px 20px 10px; background-color:#ffffff">			
+		<%= link_to t(:mobile_version), "/m" %> | <%= link_to t(:smartfon_version), "/pda" %><br/><br/>  				
+		<center><span style="color: red; font-weight:bold;">NEW!</span> <%= link_to "Приложение для Android", "/mobile-app" %></center>				
 </div>
