select city bug fix

--- a/app/views/saunas/_searchform.html.erb
+++ b/app/views/saunas/_searchform.html.erb
@@ -79,7 +79,8 @@
 		</li>	
 		<li class="expanded black _closeOnReady _expandedBox filter-section">
 			<h2><%= t :place_parameters %></h2>
-			<div class="place_param _expanded">		
+			<div class="place_param _expanded">
+				<input type="hidden" name="q[address_city_id_eq]" id="hidden_city_id"/>
 				<dl>
 					<dt class="township"><%= t :district_colon %></dt>
 					<dd class="township">
