--- a/app/views/saunas/_city.html.erb
+++ b/app/views/saunas/_city.html.erb
@@ -7,6 +7,7 @@
 <script type="text/javascript">
 $('#q_address_city_id_eq').change(function() {
 	var city_id = $("#q_address_city_id_eq").val();
+	$('#hidden_city_id').val(city_id);
 	$.ajax({
 	  type : 'GET',
 	  url : '/saunas?q%5Baddress_city_id_eq%5D='+city_id,
