--- a/app/views/cities/city.html.erb
+++ b/app/views/cities/city.html.erb
@@ -8,6 +8,10 @@
 <div class="main-page">
 	<%= render 'results' %>		
 </div>
+<div class="footer_description">
+	<%= @content %>
+</div>
+
 <script type="text/javascript">
 	Frame.initSearchBySaunaName();
 	Frame.initSaunaSorting();
