--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,7 +7,8 @@
 				<h1>Бани и сауны в Ижевске</h1>
 				<div class="extra_params _expanded">
 					<div class="about">
-						<p>Наш портал — это единый каталог, которые содержит <a href="/all">бани и сауы в Ижевске</a>, а также удобный механизм их поиска и бронирования. 
+						<p>Наш портал — это единый каталог, которые содержит <a href="/izhevsk">сауны в Ижевске</a>, <a href="/kazan">Казани</a>, <a href="/kirov">Кирове</a> 
+						и других городах, а также удобный механизм их поиска и бронирования. 
 						Вы можете осуществлять поиск саун по нужным вам критериям (цена, вместимость, тип и т.д.), читать описания, смотреть 
 						фотографии, узнавать местоположение сауны на карте города или оставлять комментарии. Забронируйте понравившуюся сауну и внесите предоплату на нашем сайте, 
 						воспользовавшись банковской картой, электронным кошельком или терминалами оплаты системы Qiwi.</p>
