--- a/app/views/pages/all.html.erb
+++ b/app/views/pages/all.html.erb
@@ -6,7 +6,8 @@
 				<h1>Сауны и бани в городах</h1>
 				<div class="extra_params _expanded">
 					<div class="about">
-						<p>На нашем сайте представлено более 110 саун и бань во всех городах Удмуртской Республики. Здесь собрана самая полная информация о саунах нашего региона —
+						<p>На нашем сайте представлено более 400 <a href="/izhevsk">саун в Ижевске</a>, <a href="/kazan">Казани</a>, <a href="/kirov">Кирове</a> 
+						и других городах. Здесь собрана самая полная информация о саунах нашего региона —
 						описание, цены, фото, отзывы, схемы проезда, адреса и телефоны. 
 						Мы постоянно работаем над обновлением списка, как правило, каждую 
 						неделю в нашем каталоге появляется новая сауна или баня. 
