--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -152,6 +152,14 @@ code { padding: .2em .5em; }
 	line-height: 1.5;
 	font-size: 13px;
 }
+.footer_description {
+	font-style: italic;
+	font-family: Georgia, Times New Roman;
+	padding-bottom: 6px;
+	line-height: 1.5;
+	font-size: 13px;
+	margin-top: 20px;
+}
 .content {
 	padding: 0 0 44px 0;
 	margin: 0 auto;
