--- a/app/views/sauna_items/show.html.erb
+++ b/app/views/sauna_items/show.html.erb
@@ -1,6 +1,5 @@
 <div class="detail-page">
-	<%-#= render '/saunas/navigation' %>	
-	<%-#= render '/saunas/help' %>	
+	<%= render 'shared/navigation', :left_link => root_path, :left_label => t(:home), :right_label => @sauna.name %>		
 	
 	<div class="round-box">
 		<%= render '/saunas/baseinfo' %>
@@ -15,7 +14,13 @@
 		<div class="clearing"></div>
 	</div>		
 	
-	<%= render '/saunas/gallery' %>
+	<% if !@advertisements.empty? %>
+		<%= render '/saunas/advertisement' %>		
+	<% end %>	
+	
+	<% unless @sauna.sauna_photos.empty? %>
+		<%= render '/saunas/gallery' %>		
+	<% end %>		
 </div>	
 
 <!-- We only want the thunbnails to display when javascript is disabled -->
