--- a/app/views/cities/city.html.erb
+++ b/app/views/cities/city.html.erb
@@ -5,8 +5,8 @@
 	отметить праздник или провести корпоратив. Здесь вы сможете найти всю информацию о саунах <%= @city_name %> - адреса, телефоны, фото, цены и отзывы. Желаем хорошего отдыха!
 	</div>
 </div>	
-<div class="main-page">
-	<%= render 'results' %>		
+<div class="main-page">	
+	<%= render :partial => '/saunas/results' %>			
 </div>
 <div class="footer_description">
 	<%= @content %>
