--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -2,7 +2,7 @@
 	<div class="close-button" id="close-button">x</div>					
 	<div class="welcome-content">
 	<p>
-	Здесь вы найдете все сауны и бани региона Поволжье - в Ижевске, Казани, Кирове, Нефтекамске, Набережных Челнах, Нижнекамске и других городах. Более 2000 фотографий. 
+	Здесь вы найдете все сауны и бани региона Поволжье — в Ижевске, Казани, Кирове, Нефтекамске, Набережных Челнах, Нижнекамске и других городах. Более 2000 фотографий. 
 	Постоянно добавляются новые сауны, охватываются новые города.
 	<p>
 	Две мобильные версии сайта — <a href="/m">для обычных телефонов</a> и для <a href="/pda">для смартфонов</a>. 
