--- a/app/views/pages/advertisement.html.erb
+++ b/app/views/pages/advertisement.html.erb
@@ -9,14 +9,14 @@
 						<p>
 						Мы предлагаем размещение рекламы на нашем сайте, а также в мобильном <a href="/mobile-app">приложении "Сауны и бани"</a> для Android. 
 						Сайт содержит наиболее полную информацию по саунам и баням в Ижевске. Также в каталог добавляются сауны соседних городов. 
-						В месяц сайт посещают более 1500 человек и эта цифра растет. Сайт легко находится  
+						В месяц сайт посещают более 3000 человек и эта цифра растет. Сайт легко находится  
 						в поисковых системах Яндекс и Google по соответствующим поисковым запросам. 
 						</p>
 						
 						<h4>Блок на главной странице</h4>					
 						<p>
-						Блок на главной странице cодержит до трех баннеров, размер каждого не более 200х300. Тематика - любая.
-						Данный блок показывается на каждой странице сайта. Стоимость размещения одного баннера - 300 рублей в месяц.
+						Блок на главной странице cодержит до трех баннеров, размер каждого не более 200х300. Тематика — любая.
+						Данный блок показывается на каждой странице сайта. Стоимость размещения одного баннера — 1000 рублей в месяц.
 						</p>
 					
 						<center>
@@ -26,9 +26,9 @@
 						
 						<h4>Блок тематической рекламы</h4>	
 						<p>Блок тематической рекламы располагается на странице описания банного комплекса, содержит два рекламных объявления. 
-						Тематика - службы такси, доставка продуктов питания, доставка алкоголя в ночное время, организация выездных шоу-программ.
+						Тематика — службы такси, доставка продуктов питания, доставка алкоголя в ночное время, организация выездных шоу-программ.
 						Блок показывается для всех объектов выбранного города. Для каждого банного комплекса показываются объявления, 
-						относящиеся к городу, в котором он находится. Стоимость размещения объявления - 100 рублей в месяц.
+						относящиеся к городу, в котором он находится. Стоимость размещения объявления — 500 рублей в месяц.
 						</p>
 						
 						<center>
