--- a/app/views/pages/mobile-app.html.erb
+++ b/app/views/pages/mobile-app.html.erb
@@ -10,11 +10,11 @@
 						<p>Мобильное приложение для телефонов на платформе Android позволит вам быстро найти нужную сауну, сделав всего несколько касаний. Приложение разработано 
 						на Android 1.6, т.о. оно поддерживается 99% устройств на этой популярной платформе.</p>	
 
-						<p><a href="https://play.google.com/store/apps/details?id=com.gotosauna" target="_blank">Перейти на страницу в Google Play</a> - 
+						<p><a href="https://play.google.com/store/apps/details?id=com.gotosauna" target="_blank">Перейти на страницу в Google Play</a> — 
 						перейти на страницу приложения "Сауны и бани" в магазине приложений Google Play для устройств на Android.<br/> 		
 						</p>
 						
-						<p><a href="/assets/android/gotosauna.apk">Скачать gotosauna.apk, 270Kb</a> - скачать приложение "Сауны и бани" бесплатно с сайта. Ссылка для скачивания через QR-код:<br/> 		
+						<p><a href="/assets/android/gotosauna.apk">Скачать gotosauna.apk, 270Kb</a> — скачать приложение "Сауны и бани" бесплатно с сайта. Ссылка для скачивания через QR-код:<br/> 		
 						</p>
 						<img src="http://qr.kaywa.com/img.php?s=8&d=http%3A%2F%2Fgo-to-sauna.ru%2Fassets%2Fandroid%2Fgotosauna.apk" 
 						align="center" width="200px" height="200px" alt="QRCode"/>
