--- a/app/views/layouts/_menu_super_admin.html.erb
+++ b/app/views/layouts/_menu_super_admin.html.erb
@@ -62,6 +62,22 @@
 </span><br/>
 
 <span style="padding-left:0em">&mdash; 
+	<% if (request.fullpath.include?("/admin/coupon_urls")) %>
+		<b>купонные сайты</b>
+	<% else %>												
+		<a href="/admin/coupon_urls">купонные сайты</a>
+	<% end %>									
+</span><br/>
+
+<span style="padding-left:0em">&mdash; 
+	<% if (request.fullpath.include?("/admin/coupon_deals")) %>
+		<b>купонные акции</b>
+	<% else %>												
+		<a href="/admin/coupon_deals">купонные акции</a>
+	<% end %>									
+</span><br/>
+
+<span style="padding-left:0em">&mdash; 
 	<% if (request.fullpath.include?("/admin/sms_messages")) %>
 		<b>смс сообщения</b>
 	<% else %>												
@@ -109,3 +125,10 @@
 	<% end %>									
 </span><br/>
 
+<span style="padding-left:0em">&mdash; 
+	<% if (request.fullpath.include?("/coupons/daily")) %>
+		<b>получить акции</b>
+	<% else %>												
+		<a href="/coupons/daily">получить акции</a>
+	<% end %>									
+</span><br/>
