--- a/app/views/pages/all.html.erb
+++ b/app/views/pages/all.html.erb
@@ -21,6 +21,9 @@
 						<a name="G"><b>Г</b></a><br/>
 						<a href="/glazov">Глазов</a><br/><br/>
 						
+						<a name="E"><b>Е</b></a><br/>
+						<a href="/ekaterinburg">Екатеринбург</a><br/><br/>
+						
 						<a name="I"><b>И</b></a><br/>
 						<a href="/izhevsk">Ижевск</a><br/>
 						<a href="/yola">Йошкар-Ола</a><br/><br/>		
@@ -45,7 +48,12 @@
 						<a href="/perm">Пермь</a><br/><br/>	
 
 						<a name="U"><b>У</b></a><br/>
-						<a href="/ufa">Уфа</a><br/><br/>							
+						<a href="/ulyanovsk">Ульяновск</a><br/>						
+						<a href="/ufa">Уфа</a><br/><br/>			
+
+						<a name="Ch"><b>Ч</b></a><br/>
+						<a href="/cheboksari">Чебоксары</a><br/>		
+						<a href="/chelyabinsk">Челябинск</a><br/>								
 					</div>
 					<div class="clearing"></div>
 				</div>	
