--- a/app/views/cities/city.html.erb
+++ b/app/views/cities/city.html.erb
@@ -1,15 +1,15 @@
 <div>
-	<h1>Сауны и бани <%= @city_name %></h1>
+	<h1>Сауны и бани <%= @city.name2 %></h1>
 	<div class="title_description">
 	Люди всё чаще ходят в бани и сауны не только в целях укрепления здоровья, но и чтобы расслабиться, встретиться с друзьями, 
-	отметить праздник или провести корпоратив. Здесь вы сможете найти всю информацию о саунах <%= @city_name %> - адреса, телефоны, фото, цены и отзывы. Желаем хорошего отдыха!
+	отметить праздник или провести корпоратив. Здесь вы сможете найти всю информацию о саунах <%= @city.name2 %> - адреса, телефоны, фото, цены и отзывы. Желаем хорошего отдыха!
 	</div>
 </div>	
 <div class="main-page">	
 	<%= render :partial => '/saunas/results' %>			
 </div>
 <div class="footer_description">
-	<%= @content %>
+	<%= @city.page_content %>
 </div>
 
 <script type="text/javascript">
