--- a/app/views/layouts/_menu_super_admin.html.erb
+++ b/app/views/layouts/_menu_super_admin.html.erb
@@ -132,3 +132,11 @@
 		<a href="/coupons/daily">получить акции</a>
 	<% end %>									
 </span><br/>
+
+<span style="padding-left:0em">&mdash; 
+	<% if (request.fullpath.include?("/admin/cities")) %>
+		<b>города</b>
+	<% else %>												
+		<a href="/admin/cities">города</a>
+	<% end %>									
+</span><br/>
