--- a/app/views/shared/_title.html.erb
+++ b/app/views/shared/_title.html.erb
@@ -67,10 +67,30 @@
 			<% @city_id = 14 %>		
 			<meta name="description" content="Сауны Йошкар-Олы, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Йошкар-Оле в одном месте" />
 			<meta name="keywords" content="сауна, бани, сауны Йошкар-Олы, сауна в Йошкар-Оле, бани и сауны, бани Йошкар-Олы, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Йошкар-Олы, русские, японские и турецкие бани — цены в Йошкар-Оле</title>				
+			<title>Сауны Йошкар-Олы, русские, японские и турецкие бани — цены в Йошкар-Оле</title>		
+		<% elsif request.fullpath.include? "ekaterinburg"  %>			
+			<% @city_id = 15 %>		
+			<meta name="description" content="Сауны Екатеринбурга, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Екатеринбурге в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Екатеринбурга, сауна в Екатеринбурге, бани и сауны, бани Екатеринбурга, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Екатеринбурга, русские, японские и турецкие бани — цены в Екатеринбурге</title>	
+		<% elsif request.fullpath.include? "cheboksari"  %>			
+			<% @city_id = 16 %>		
+			<meta name="description" content="Сауны в Чебоксарах, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Чебоксарах в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Чебоксар, сауна в Чебоксарах, бани и сауны, бани Чебоксар, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Чебоксар, русские, японские и турецкие бани — цены в Чебоксарах</title>	
+		<% elsif request.fullpath.include? "ulyanovsk"  %>			
+			<% @city_id = 17 %>		
+			<meta name="description" content="Сауны Ульяновска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Ульяновске в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Ульяновска, сауна в Ульяновске, бани и сауны, бани Ульяновска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Ульяновска, русские, японские и турецкие бани — цены в Ульяновске</title>	
+		<% elsif request.fullpath.include? "chelyabinsk"  %>			
+			<% @city_id = 18 %>		
+			<meta name="description" content="Сауны Челябинска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Челябинске в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Челябинска, сауна в Челябинске, бани и сауны, бани Челябинска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Челябинска, русские, японские и турецкие бани — цены в Челябинске</title>				
 		<% else %>
 			<% @city_id = 1 %>		
-			<meta name="description" content="Сауны, бани, хаммамы Ижевска, Казани, Кирова, Уфы, Перми, Набережных Челнов, Нижнекамска, Нефтекамска. Телефоны, цены, фото, отзывы." />
-			<meta name="keywords" content="сауны, сауна, баня, бани, хаммам, сауны Ижевска, сауны Казани, сауны Уфы, сауны Перми, сауны Кирова, сауны Набережных Челнов, сауны Нефтекамска" />				
-			<title>Сауны Ижевска, Казани, Кирова, Набережных Челнов. Русские, японские и турецкие бани — цены, фото, отзывы.</title>
+			<meta name="description" content="Сауны, бани, хаммамы Ижевска, Казани, Кирова, Челябинска, Ульяновска, Екатеринбурга Уфы, Перми, Набережных Челнов, Нижнекамска, Нефтекамска. Телефоны, цены, фото, отзывы." />
+			<meta name="keywords" content="сауны, сауна, баня, бани, хаммам, сауны Ижевска, сауны Казани, сауны Уфы, сауны Перми, сауны Кирова, сауны в Чебоксарах, сауны в Ульяновске, сауны Екатеринбурга, сауны Челябинска, сауны Набережных Челнов, сауны Нефтекамска" />				
+			<title>Сауны Ижевска, Казани, Кирова. Русские, японские и турецкие бани — цены, фото, отзывы.</title>
 		<% end %>
