--- a/app/views/saunas/_city.html.erb
+++ b/app/views/saunas/_city.html.erb
@@ -1,7 +1,7 @@
 <div class="mobile-ver">	
 	<center>
 	<div class="select-city">
-		<span>Ваш город:</span><%= select("q", "address_city_id_eq", City.all.collect {|p| [ p.name, p.id ] }) %> </div>
+		<span>Ваш город:</span><%= select("q", "address_city_id_eq", City.order("name").collect {|p| [ p.name, p.id ] }) %> </div>
 	</center>
 </div> 
 <script type="text/javascript">
