--- a/app/views/admin/cities/_results.html.erb
+++ b/app/views/admin/cities/_results.html.erb
@@ -11,3 +11,6 @@
 		<%= render 'shared/empty_row' %>
 	<% end %>	
 </ul>
+<div class="digg_pagination">
+	<%= paginate @cities, :remote => true %>
+</div>	
