--- a/app/views/shared/_title.html.erb
+++ b/app/views/shared/_title.html.erb
@@ -1,96 +1,9 @@
-		<% if request.fullpath.include? "izhevsk" %>
-			<% @city_id = 1 %>
-			<meta name="description" content="Сауны Ижевска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Ижевске в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Ижевска, сауна в Ижевске, бани и сауны, бани Ижевска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Ижевска, русские, японские и турецкие бани — цены в Ижевске</title>
-		<% elsif request.fullpath.include? "votkinsk"  %>	
-			<% @city_id = 2 %>		
-			<meta name="description" content="Сауны Воткинска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Воткинске в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Воткинска, сауна в Воткинске, бани и сауны, бани Воткинска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Воткинска, русские, японские и турецкие бани — цены в Воткинске</title>
-		<% elsif request.fullpath.include? "glazov"  %>			
-			<% @city_id = 3 %>		
-			<meta name="description" content="Сауны Глазова, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Глазове в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Глазова, сауна в Глазове, бани и сауны, бани Глазова, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Глазова, русские, японские и турецкие бани — цены в Глазове</title>				
-		<% elsif request.fullpath.include? "sarapul"  %>									
-			<% @city_id = 4 %>
-			<meta name="description" content="Сауны Сарапула, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Сарапуле в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Сарапула, сауна в Сарапуле, бани и сауны, бани Сарапула, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Сарапула, русские, японские и турецкие бани — цены в Сарапуле</title>			
-		<% elsif request.fullpath.include? "mozhga"  %>	
-			<% @city_id = 5 %>		
-			<meta name="description" content="Сауны Можги, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Можге в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Можги, сауна в Можге, бани и сауны, бани Можги, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Можги, русские, японские и турецкие бани — цены в Можге</title>		
-		<% elsif request.fullpath.include? "kirov"  %>		
-			<% @city_id = 6 %>
-			<meta name="description" content="Сауны Кирова, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Кирове в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Кирова, сауна в Кирове, бани и сауны, бани Кирова, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Кирова, русские, японские и турецкие бани — цены в Кирове</title>	
-		<% elsif request.fullpath.include? "kazan"  %>	
-			<% @city_id = 7 %>
-			<meta name="description" content="Сауны Казани, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Казани в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Казани, сауна в Казани, бани и сауны, бани Казани, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Казани, русские, японские и турецкие бани — цены в Казани</title>	
-		<% elsif request.fullpath.include? "chelni"  %>		
-			<% @city_id = 8 %>
-			<meta name="description" content="Сауны Набережных Челнов, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Набережных Челнах в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Набережных Челнов, сауна в Набережных Челнах, бани и сауны, бани Набережных Челнов, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Набережных Челнов, русские, японские и турецкие бани — цены в Набережных Челнах</title>				
-		<% elsif request.fullpath.include? "nizhnekamsk"  %>	
-			<% @city_id = 9 %>		
-			<meta name="description" content="Сауны Нижнекамска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Нижнекамске в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Нижнекамска, сауна в Нижнекамске, бани и сауны, бани Нижнекамска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Нижнекамска, русские, японские и турецкие бани — цены в Нижнекамске</title>		
-		<% elsif request.fullpath.include? "neftekamsk"  %>			
-			<% @city_id = 10 %>		
-			<meta name="description" content="Сауны Нефтекамска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Нефтекамске в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Нефтекамска, сауна в Нефтекамске, бани и сауны, бани Нефтекамска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Нефтекамска, русские, японские и турецкие бани — цены в Нефтекамске</title>	
-		<% elsif request.fullpath.include? "perm"  %>			
-			<% @city_id = 11 %>		
-			<meta name="description" content="Сауны Перми, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Перми в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Перми, сауна в Перми, бани и сауны, бани Перми, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Перми, русские, японские и турецкие бани — цены в Перми</title>	
-		<% elsif request.fullpath.include? "ufa"  %>			
-			<% @city_id = 12 %>		
-			<meta name="description" content="Сауны Уфы, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Уфе в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Уфы, сауна в Уфе, бани и сауны, бани Уфы, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Уфы, русские, японские и турецкие бани — цены в Уфе</title>				
-		<% elsif request.fullpath.include? "sterlitamak"  %>			
-			<% @city_id = 13 %>		
-			<meta name="description" content="Сауны Стерлитамака, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Стерлитамаке в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Стерлитамака, сауна в Стерлитамаке, бани и сауны, бани Стерлитамака, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Стерлитамака, русские, японские и турецкие бани — цены в Стерлитамаке</title>	
-		<% elsif request.fullpath.include? "yola"  %>			
-			<% @city_id = 14 %>		
-			<meta name="description" content="Сауны Йошкар-Олы, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Йошкар-Оле в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Йошкар-Олы, сауна в Йошкар-Оле, бани и сауны, бани Йошкар-Олы, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Йошкар-Олы, русские, японские и турецкие бани — цены в Йошкар-Оле</title>		
-		<% elsif request.fullpath.include? "ekaterinburg"  %>			
-			<% @city_id = 15 %>		
-			<meta name="description" content="Сауны Екатеринбурга, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Екатеринбурге в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Екатеринбурга, сауна в Екатеринбурге, бани и сауны, бани Екатеринбурга, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Екатеринбурга, русские, японские и турецкие бани — цены в Екатеринбурге</title>	
-		<% elsif request.fullpath.include? "cheboksari"  %>			
-			<% @city_id = 16 %>		
-			<meta name="description" content="Сауны в Чебоксарах, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Чебоксарах в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Чебоксар, сауна в Чебоксарах, бани и сауны, бани Чебоксар, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Чебоксар, русские, японские и турецкие бани — цены в Чебоксарах</title>	
-		<% elsif request.fullpath.include? "ulyanovsk"  %>			
-			<% @city_id = 17 %>		
-			<meta name="description" content="Сауны Ульяновска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Ульяновске в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Ульяновска, сауна в Ульяновске, бани и сауны, бани Ульяновска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Ульяновска, русские, японские и турецкие бани — цены в Ульяновске</title>	
-		<% elsif request.fullpath.include? "chelyabinsk"  %>			
-			<% @city_id = 18 %>		
-			<meta name="description" content="Сауны Челябинска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Челябинске в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны Челябинска, сауна в Челябинске, бани и сауны, бани Челябинска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны Челябинска, русские, японские и турецкие бани — цены в Челябинске</title>				
-		<% else %>
-			<% @city_id = 1 %>		
-			<meta name="description" content="Сауны, бани, хаммамы Ижевска, Казани, Кирова, Челябинска, Ульяновска, Екатеринбурга Уфы, Перми, Набережных Челнов, Нижнекамска, Нефтекамска. Телефоны, цены, фото, отзывы." />
-			<meta name="keywords" content="сауны, сауна, баня, бани, хаммам, сауны Ижевска, сауны Казани, сауны Уфы, сауны Перми, сауны Кирова, сауны в Чебоксарах, сауны в Ульяновске, сауны Екатеринбурга, сауны Челябинска, сауны Набережных Челнов, сауны Нефтекамска" />				
-			<title>Сауны Ижевска, Казани, Кирова. Русские, японские и турецкие бани — цены, фото, отзывы.</title>
-		<% end %>
+<% @slash_index = request.fullpath.rindex('/') %>
+<% @city_path = request.fullpath[@slash_index, request.fullpath.size - @slash_index] %>	
+<% @city = City.where("path = ?", @city_path).first %>
+	
+<meta name="description" content="Сауны <%= @city.name2 %>, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в <%= @city.name3 %> в одном месте" />
+<meta name="keywords" content="сауна, бани, сауны <%= @city.name2 %>, сауна в <%= @city.name3 %>, бани и сауны, бани <%= @city.name2 %>, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+<title>Сауны <%= @city.name2 %>, русские, японские и турецкие бани — цены в <%= @city.name3 %></title>
+			
+	
