--- a/app/views/shared/_title.html.erb
+++ b/app/views/shared/_title.html.erb
@@ -2,8 +2,12 @@
 <% @city_path = request.fullpath[@slash_index, request.fullpath.size - @slash_index] %>	
 <% @city = City.where("path = ?", @city_path).first %>
 	
+<% if (@city != nil) %>	
 <meta name="description" content="Сауны <%= @city.name2 %>, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в <%= @city.name3 %> в одном месте" />
 <meta name="keywords" content="сауна, бани, сауны <%= @city.name2 %>, сауна в <%= @city.name3 %>, бани и сауны, бани <%= @city.name2 %>, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-<title>Сауны <%= @city.name2 %>, русские, японские и турецкие бани — цены в <%= @city.name3 %></title>
-			
-	
+<title>Сауны <%= @city.name2 %>, русские, японские и турецкие бани — цены в <%= @city.name3 %></title>		
+<% else %>	
+<meta name="description" content="Сауны Ижевска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Ижевске в одном месте" />
+<meta name="keywords" content="сауна, бани, сауны Ижевска, сауна в Ижевске, бани и сауны, бани Ижевска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+<title>Сауны Ижевска, русские, японские и турецкие бани — цены в Ижевске</title>
+<% end %>
