--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
 				</div>
 				<div class="content-right">																	
 					<% if !request.fullpath.include?("/coupons/index") %>
-						<a href="coupons/index"><%= image_tag("banner_728x90.jpg") %></a>						
+						<a href="/coupons/index"><%= image_tag("banner_728x90.jpg") %></a>						
 					<% end %>
 				
 					<!--
