--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,11 +62,18 @@
 						onclick="try{Ya.Metrika.informer({i:this,id:12085759,type:0,lang:'ru'});return false}catch(e){}"/></a>
 						<!-- /Yandex.Metrika informer -->
 					</td>
-					<td></td>
+					<td>					
+						<!-- begin of Top100 code -->
+						<script id="top100Counter" type="text/javascript" src="http://counter.rambler.ru/top100.jcn?2776015"></script>
+						<noscript>
+						<a href="http://top100.rambler.ru/navi/2776015/">
+						<img src="http://counter.rambler.ru/top100.cnt?2776015" alt="Rambler's Top100" border="0" />
+						</a>
+						</noscript>
+						<!-- end of Top100 code -->					
+					</td>
 					</tr>
-					</table>
-
-					
+					</table>					
 				</div>
 				<div class="content-right">																	
 					<% if !request.fullpath.include?("/coupons/index") %>
